--- a/css/global.css
+++ b/css/global.css
@@ -69,7 +69,7 @@ a:hover {
   min-height: 100%;
 }
 
-.main {
+main {
   flex: 1 1 auto;
 }
 
@@ -94,7 +94,6 @@ header {
 
 .main {
   margin-top: 6rem;
-  display: flex;
 }
 
 .main-container {
@@ -108,6 +107,8 @@ header {
 
   font-size: 1.2rem;
   font-weight: 500;
+  
+  line-height: 1;
 
   color: #fff;
 }
@@ -115,22 +116,33 @@ header {
 [class*="-heading__head"] {
   margin-bottom: 2rem;
 
-  font-size: 3.1rem;
+  font-size: 3rem;
   font-style: italic;
   font-weight: 500;
+  line-height: 1;
 }
 
-.divider-1__text {
+.intro-text {
+  display: flex;
+}
+
+.intro-text__left,
+.intro-text__right {
+  width: 50%;
+}
+
+.divider__text {
   display: flex;
   justify-content: space-between;
   font-family: 'NicoMoji';
+  width: 100%;
 
   position: relative;
 
-  margin: 193px 0;
+  margin: 193px auto;
 }
 
-.divider-1__text::after {
+.divider__text::after {
   content: "";
   width: 100%;
   height: 1px;
@@ -142,7 +154,7 @@ header {
   background: linear-gradient(to right, transparent 0%, #6E0DFF 50%, transparent 100%);
 }
 
-.divider-1__text::before{
+.divider__text::before{
   content: "";
   width: 100%;
   height: 1px;
@@ -155,24 +167,164 @@ header {
 
 }
 
-.divider-1__dg {
+.divider-solar::after,
+.divider-solar::before {
+  background: linear-gradient(to right, transparent 0%, #E6D32B 50%, transparent 100%);
+}
+
+.divider-wind::after,
+.divider-wind::before {
+  background: linear-gradient(to right, transparent 0%, #A3CBF8 50%, transparent 100%);
+}
+
+.divider-hydro::after,
+.divider-hydro::before {
+  background: linear-gradient(to right, transparent 0%, #0029FF 50%, transparent 100%);
+}
+
+.divider__dg {
   font-size: 3.5rem;
   font-family: inherit;
 
+  margin-left: 10rem;
+
   color: #fff;
 }
 
-.divider-1__fact {
+.divider__fact {
   font-size: 1.5rem;
   font-family: inherit;
 
+  margin-right: 10rem;
+
   color: #fff;
 }
 
+.issue-text {
+}
+
+.text-highlight {
+  color: #6E0DFF
+}
+
+.chart {
+  display: flex;
+}
+
+.current {
+  display: flex;
+  flex-direction: column;
+
+  gap: 1rem;
+}
 
 #container {
-  width: 100%;
+  width: 33%;
   height: 100vh;
   margin: 0;
   padding: 0;
+}
+#container2 {
+  width: 33%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+#container3 {
+  width: 33%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+.transition-bg {
+  /* background-image: url(../assets/img/ren-bg.png); */
+  background: url(../assets/img/ren-bg.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  width: 1920px;
+  height: 1080px;
+  margin: 5rem auto;
+}
+
+.solar-heading__subhead span {
+  color: #E6D32B;
+}
+
+.solar-heading__head {
+  color: #E6D32B;
+}
+
+.solar-info {
+  display: flex;
+}
+
+.solar-text {
+  width: 40%;
+  padding-right: 1rem;
+}
+
+.solar-map {
+  width: 60%;
+}
+
+.wind-heading__subhead span {
+  color: #A3CBF8;
+}
+
+.wind-heading__head {
+  color: #A3CBF8;
+}
+
+.wind-info {
+  display: flex;
+}
+
+.wind-text {
+  width: 40%;
+  padding-right: 1rem;
+}
+
+.wind-map {
+  width: 60%;
+}
+
+.hydro-heading__subhead span {
+  color: #0029FF;
+}
+
+.hydro-heading__head {
+  color: #0029FF;
+}
+
+.hydro-info {
+  display: flex;
+}
+
+.hydro-text {
+  width: 40%;
+  padding-right: 1rem;
+}
+
+.hydro-map {
+  width: 60%;
+}
+
+
+.footer-container {
+  display: flex;
+
+  font-weight: 300;
+  font-size: 0.8rem;
+}
+
+.footer-author {
+  width: 40%;
+}
+
+.footer-sources {
+  width: 60%;
 }
