--- a/css/global.css
+++ b/css/global.css
@@ -36,7 +36,7 @@ h6 {
 html,
 body {
   font-family: 'Montserrat', 'NicoMoji';
-  font-size: 20px;
+  font-size: 18px;
   line-height: 160%;
   font-weight: 500;
   height: 100%;
@@ -78,6 +78,26 @@ main {
   margin: 0 auto;
   padding: 0 1rem;
 }
+
+@media only screen and (max-width: 1087px) {
+  [class*="-container"] {
+      max-width: 970px;
+  }
+
+  .main-container {
+    gap: 3rem;
+  }
+}
+@media only screen and (max-width: 991.98px) {
+  [class*="-container"] {
+      max-width: 850px;
+  }
+
+  .main-container {
+    gap: 3rem;
+  }
+}
+
 
 /* hEADER  */
 
@@ -124,6 +144,7 @@ header {
 
 .intro-text {
   display: flex;
+  gap: 1rem;
 }
 
 .intro-text__left,
@@ -139,7 +160,7 @@ header {
 
   position: relative;
 
-  margin: 193px auto;
+  margin: 103px auto;
 }
 
 .divider__text::after {
@@ -219,7 +240,7 @@ header {
 }
 
 #container {
-  width: 33%;
+  width: 100%;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -236,6 +257,10 @@ header {
   height: 100vh;
   margin: 0;
   padding: 0;
+}
+
+.anychart-credits {
+  display: none;
 }
 
 .transition-bg {
@@ -313,12 +338,22 @@ header {
   width: 60%;
 }
 
+.hydro-text__li {
+  color: #0029FF;
+  margin: 0.5rem 0;
+}
+
+.footer {
+  margin-top: 5rem;
+}
 
 .footer-container {
   display: flex;
 
   font-weight: 300;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
+
+  font-family: 'Courier New', Courier, monospace;
 }
 
 .footer-author {
@@ -327,4 +362,76 @@ header {
 
 .footer-sources {
   width: 60%;
+}
+
+.footer-author__head {
+  font-weight: bold;
+  font-size: 0.9rem;
+
+  margin-top: 1rem;
+  color: #Fff;
+}
+
+
+
+
+@media only screen and (max-width: 1087px) {
+  [class*="-container"] {
+      max-width: 970px;
+  }
+
+  .main-container {
+    gap: 3rem;
+  }
+}
+@media only screen and (max-width: 991.98px) {
+  [class*="-container"] {
+      max-width: 850px;
+  }
+
+  .main-container {
+    gap: 3rem;
+  }
+
+  [class*="-heading__subhead"] {
+    margin-bottom: .75rem;
+  
+    font-size: 1rem;
+    font-weight: 500;
+    
+    line-height: 1;
+  
+    color: #fff;
+  }
+  
+  [class*="-heading__head"] {
+    margin-bottom: 1.5rem;
+  
+    font-size: 2rem;
+    font-style: italic;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+
+  .divider__text {
+    margin: 40px auto;
+    gap: 1.5rem;
+  }
+  .divider__text::after {
+    top: -61px;
+  }
+
+  .divider__text::before {
+    top: 125px;
+  }
+
+  .divider__dg {
+    font-size: 1.5rem;
+    margin-left: 0;
+  }
+
+  .divider__fact {
+    font-size: 1rem;
+    margin-right: 0;
+  }
 }
