--- a/css/global.css
+++ b/css/global.css
@@ -519,6 +519,7 @@ tspan {
 @media only screen and (max-width: 991.98px) {
   [class*="-container"] {
       max-width: 850px;
+      padding: 0 .5rem;
   }
 
   .main-container {
@@ -565,5 +566,43 @@ tspan {
   .divider__fact {
     font-size: 1rem;
     margin-right: 0;
+  }
+
+  .charts {
+    flex-direction: column;
+  }
+
+  .charts > * {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+  }
+
+  .solar-info,
+  .wind-info,
+  .hydro-info {
+    flex-direction: column;
+  }
+
+  .solar-text,
+  .wind-text,
+  .hydro-text {
+    width: 100%;
+    padding-bottom: 1.4rem;
+  }
+  
+  .solar-map,
+  .wind-map,
+  .hydro-map {
+    width: 100%;
+  }
+
+  .divider__text::before {
+    top: 60px;
+  }
+
+  .divider__text::after {
+    top: -30px;
   }
 }
