--- a/css/global.css
+++ b/css/global.css
@@ -606,3 +606,20 @@ tspan {
     top: -30px;
   }
 }
+
+
+/* Default styles for larger screens */
+
+
+.splide__slide img {
+  width: 100%; /* Make the images fill the entire width of the container */
+  height: 100%; /* Maintain the aspect ratio of the images */
+  object-fit: cover; /* Ensure the images cover the entire slide */
+}
+
+/* Media query for smaller screens (e.g., phones) */275
+@media screen and (max-width: 767px) {
+  .splide__slide img {
+    object-fit: scale-down; /* Ensure the images cover the entire slide */
+  }
+}
