--- a/css/global.css
+++ b/css/global.css
@@ -33,6 +33,12 @@ h6 {
     font-size: inherit;
 }
 
+:root {
+  --shadow: #43a047;
+  --scrollbarBG: #eee;
+  --thumbBG: #66bb6a;
+}
+
 html,
 body {
   font-family: 'Montserrat', 'NicoMoji';
@@ -628,3 +634,26 @@ tspan {
     object-fit: scale-down; /* Ensure the images cover the entire slide */
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #27252A;
+  box-shadow: inset 0 0 5px grey;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6873a6;
+  border-radius: 10px;
+  box-shadow: 0 -100vh 0 100vh #6873a6, 0 0 15px 5px black, 0 0 10px 5px #6873a6;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4153a4;
+}
+
