--- a/css/global.css
+++ b/css/global.css
@@ -348,7 +348,7 @@ header {
   font-size: 1.5rem;
   font-family: inherit;
 
-  margin-right: 10rem;
+  /* margin-right: 10rem; */
 
   color: #fff;
 }
